--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,21 @@ services:
       context: ../front
       dockerfile: Dockerfile
     ports:
-      - 80:3000
+      - 3000:3000
     tty:
       true
+    networks:
+      - frontend
+
+  nginx:
+    container_name: "nginx"
+    depends_on:
+      - front
+      - back
+    build:
+      context: ./data
+    ports:
+      - "80:80"
     networks:
       - frontend
 
